# medical-point-MVP

./: .arangodb  .flake8  .gitignore  .openvpn  Makefile  README.md  TODO  openapi.yml  pyproject.toml
src/common/arango/: __init__.py  configuration.py  middleware.py
src/common/auth/: __init__.py  auth.py
src/common/clickhouse/: configuration.py  middleware.py
src/common/context/: __init__.py  context.py
src/common/exceptions/: __init__.py
src/common/health_checks/: __init__.py  health_checks.py
src/common/kafka/: __init__.py  configuration.py  middleware.py
src/common/logger/: __init__.py  logger.py  (+1 more)
src/imports/: ammo_generator.py  build_import_files.py  distributions.py  generators.py  readme
src/inspections/: application.py  configuration.py  main.py
src/migrations/: arango-import.txt  import.txt  inspections.sql  inspections_materializations.sql  migrations.txt
src/organizations/: application.py  main.py
src/structures/: .env.example  application.py  configuration.py  main.py
tests/: conftest.py  helpers.py
tests/test_devices/: test_change_parent.py  test_create.py  test_delete.py  test_exam.py  test_find.py  test_get_by_id.py  test_update.py
tests/test_organization_unit/: conftest.py  test_change_parent.py  test_create.py  test_delete.py  test_find.py  test_get_by_id.py  test_update.py
tests/test_outlets/: test_change_parent.py  test_create.py  test_delete.py  test_find.py  test_get_by_id.py  test_update.py
tests/test_workers/: test_change_parent.py  test_create.py  test_delete.py  test_find.py  test_get_by_id.py  test_update.py
(+66 files in other folders)
