[tool.poetry]
name = "Medpoint 2.0"
version = "0.1.0"
description = "Medical checks"
authors = ["Dmitrii Falko <dmitriy.falko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
fastapi-health = "^0.4.0"
fastapi-restful = "^0.4.3"
uvicorn = "^0.20.0"
pydantic = "^1.10.2"
neo4j = "^5.3.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^5.0.0"
flake8-black = "^0.3.5"
flake8-bugbear = "^22.12.6"
flake8-bandit = "^4.1.1"
flake8-commas = "^2.1.0"
flake8-builtins = "^2.0.1"
pep8-naming = "^0.13.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-annotations-coverage = "^0.0.6"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
